# fmsv3

./: .replit  docker-compose.yml  pyproject.toml  start.sh
project/: Dockerfile  app.py  create_fight_status.py  delete_alembic.py  fill_fighters.py  requirements.txt  start.sh  test.py
project/database/: datab.db
project/forms/: forms.py
project/functions/: add_weight_category_with_data_func.py  candidates_and_queue.py  check_delete_weight_category.py  create_backlog_record.py  delete_weight_category.py  new_round_name.py
project/models/: models.py
project/routes/: .~c9_invoke_8kfdCW.py  .~c9_invoke_9wM7D.py  .~c9_invoke_PzXcBl.py  .~c9_invoke_b3IP.py  .~c9_invoke_dVfIWS.py  .~c9_invoke_eFbByG.py  .~c9_invoke_owvfKJ.py  .~c9_invoke_pXUT1o.py  .~c9_invoke_sXpwBR.py  routes.py
project/temp_files/: fighters.csv
project/templates/: backlog.html  base.html  blue_candidate.html  competition.html  competition_2.html  competition_3.html  competitions_list.html  empty_candidate.html  fight.html  fights.html  fights_in_round.html  fights_list.html  participant.html  participants_list.html  queue_list.html  red_candidate.html  response_add_weight_category.html  response_add_weight_category_with_data.html  response_age_cat_delete.html  response_competition_create.html  response_edit_age_category.html  response_edit_weight_category.html  response_fight_result.html  response_new_age_category.html  response_new_round.html  response_new_tatami.html  response_new_weight_category.html  response_participant_create.html  response_red_candidate.html  settings.html  (+13 more)
proxy/: conf
(+22 files in other folders)
