[tool.poetry]
name = "repl_python3_fmsv3"
version = "0.1.0"
description = ""
authors = ["Zhenya1975 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-WTF = "^1.0.1"
SQLAlchemy = "^1.4.36"
WTForms = "^3.0.1"
alembic = "^1.7.7"
Flask = "^2.1.2"
Flask-Migrate = "^3.1.0"
Flask-SQLAlchemy = "^2.5.1"
docker = "^5.0.3"
docker-compose = "^1.29.2"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
Flask-SocketIO = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
